Bug 366294 - Folderview Widget in Panel: "Create New" creates files/folders in top path, not in current location
Summary: Folderview Widget in Panel: "Create New" creates files/folders in top path, n...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.7.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-31 08:35 UTC by stefanprobst
Modified: 2016-07-31 17:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stefanprobst 2016-07-31 08:35:26 UTC
When creating a new file/folder with folderview as a panel-widget, the new file/folder is created in the path that is set in the settings of the widget, not in the directory that I have navigated to.


Reproducible: Always

Steps to Reproduce:
1. Place folderview widget in panel with path /foo/
2. Open folderview widget and navigate to /foo/bar/
3. Click create new -> textfile -> dmy.txt

Actual Results:  
File is created as /foo/dmy.txt

Expected Results:  
File should be created as /foo/bar/dmy.txt
Comment 1 Eike Hein 2016-07-31 09:14:49 UTC
This is caused by AppletInterface::contextualActionsAboutToShow not firing for popups, so the call to update the location used by the new submenu doesn't run.
Comment 2 Eike Hein 2016-07-31 09:27:00 UTC
Fix up for review https://git.reviewboard.kde.org/r/128562/
Comment 3 Eike Hein 2016-07-31 12:19:43 UTC
Git commit 8665999ee70935e18a1e5b2a4032697842334959 by Eike Hein.
Committed on 31/07/2016 at 12:12.
Pushed by hein into branch 'master'.

Emit contextualActionsAboutToShow before showing the applet's contextualActions menu.

This is done by ContainmentInterface::mousePressEvent, but not in this
code path, which is hit for applet panel popups.

Folder View relies on this to update actions ahead of the menu being
opened.

M  +1    -0    src/scriptengines/qml/plasmoid/appletinterface.cpp

http://commits.kde.org/plasma-framework/8665999ee70935e18a1e5b2a4032697842334959
Comment 4 stefanprobst 2016-07-31 17:07:17 UTC
Thank you very much for the very quick fix!
Comment 5 Eike Hein 2016-07-31 17:08:50 UTC
Thanks for the report and sorry for the trouble :-)