Emit contextualActionsAboutToShow before showing the applet's contextualActions menu.

This is done by ContainmentInterface::mousePressEvent, but not in this
code path, which is hit for applet panel popups.

Folder View relies on this to update actions ahead of the menu being
opened.

BUG:366294