src/scriptengines/qml/plasmoid/appletinterface.cpp
@@ -758,6 +758,7 @@ bool AppletInterface::eventFilter(QObject *watched, QEvent *event)
             }
 
             QMenu *desktopMenu = new QMenu;
+            emit applet->contextualActionsAboutToShow();
             ci->addAppletActions(desktopMenu, applet(), event);
 
             if (!desktopMenu->isEmpty()) {
